--- a/css/main.sass
+++ b/css/main.sass
@@ -1,2 +1,9 @@
 @import 'partials/grid'
 @import 'partials/typography'
+@import 'partials/general'
+
+@import 'pieces/top-nav'
+
+
+.jumbotron
+  background-color: yellow
