--- a/css/main.sass
+++ b/css/main.sass
@@ -3,7 +3,29 @@
 @import 'partials/general'
 
 @import 'pieces/top-nav'
+@import 'pieces/jumbotron'
+@import 'pieces/about-app'
+@import 'pieces/footer'
+
+// $dark-blue: #354458
+// $light-blue: #3A9AD9
+// $teal: #29ABA4
+// $white: #E9E0D6
+// $red: #EB7260
+
+// about-app 360px
+// footer 39px
 
 
-.jumbotron
-  background-color: yellow
+.about-app
+  height: 360px
+
+  .tiles
+
+  .tile
+    position: relative
+    height: 360px
+    border: 1px solid red
+    margin-top: 0
+    padding: 35px
+
