--- a/css/partials/_general.sass
+++ b/css/partials/_general.sass
@@ -7,3 +7,9 @@
   float: right
 .pull-left
   float: left
+
+$dark-blue: #354458
+$light-blue: #3A9AD9
+$teal: #29ABA4
+$white: #E9E0D6
+$red: #EB7260
