--- a/css/partials/_grid.sass
+++ b/css/partials/_grid.sass
@@ -21,7 +21,7 @@
 
 [class*="-col"]
   float: left
-  margin: 1% 0 1% 1.5%
+  margin: 1% 0 1% 0
 
 [class*="-col"]:last-child
   margin-right: 0
@@ -37,7 +37,7 @@
   width: 23.87%
 
 .four-col
-  width: 32.33%
+  width: 33.33333%
 
 .five-col
   width: 40.79%
