--- a/css/partials/_general.sass
+++ b/css/partials/_general.sass
@@ -1,3 +1,9 @@
+$dark-blue: rgb(53,68,88)
+$light-blue: rgb(58,154,217)
+$teal: rgb(41,171,164)
+$white: rgb(233,224,214)
+$red: rgb(235,114,96)
+
 .container
   max-width: 1200px
   margin: 0 auto
@@ -8,8 +14,20 @@
 .pull-left
   float: left
 
-$dark-blue: #354458
-$light-blue: #3A9AD9
-$teal: #29ABA4
-$white: #E9E0D6
-$red: #EB7260
+.red-about
+  color: rgba(235,114,96, 0.8) !important
+.teal-about
+  color: rgba(41,171,164, 0.8) !important
+.lblue-about
+  color: rgba(58,154,217, 0.8) !important
+
+
+.teal-background
+  background-color: rgba(41,171,164, 0.8) !important
+  color: $white
+.blue-background
+  background-color: rgba(58,154,217, 0.8) !important
+  color: $white
+.red-background
+  background-color: rgba(235,114,96, 0.8) !important
+  color: $white
