--- a/css/pieces/_top-nav.sass
+++ b/css/pieces/_top-nav.sass
@@ -11,5 +11,6 @@
   .menu li
     padding-left: 50px
   .social a, .menu a
-    color: $dark-blue
+    color: $red
+    font-weight: bold
     text-decoration: none
