--- a/css/main.sass
+++ b/css/main.sass
@@ -18,14 +18,28 @@
 
 
 .about-app
-  height: 360px
-
-  .tiles
+  height: 420px
 
   .tile
     position: relative
-    height: 360px
-    border: 1px solid red
+    height: 420px
+    border: 1px solid $white
     margin-top: 0
-    padding: 35px
+    padding: 65px 35px
+    text-align: center
 
+    i
+      color: rgba(53,68,88, 0.6)
+      font-size: 14em
+
+    h3
+      font-family: 'Maven Pro', sans-serif
+      color: rgba(53,68,88, 0.9)
+      font-size: 1.8em
+      text-align: left
+      padding: 0 20px
+      margin-top: 40px
+
+    .start-shopping
+      margin-left: 40px
+      font-size: 2.4em
