--- a/css/pieces/_about-app.sass
+++ b/css/pieces/_about-app.sass
@@ -1,1 +1,22 @@
-
+.about-app
+  height: 420px
+  .tile
+    position: relative
+    height: 420px
+    border: 1px solid $white
+    margin-top: 0
+    padding: 65px 35px
+    text-align: center
+    i
+      color: rgba(53,68,88, 0.6)
+      font-size: 14em
+    h3
+      font-family: 'Maven Pro', sans-serif
+      color: rgba(53,68,88, 0.9)
+      font-size: 1.8em
+      text-align: left
+      padding: 0 20px
+      margin-top: 40px
+    .start-shopping
+      margin-left: 40px
+      font-size: 2.4em
