--- a/css/pieces/_top-nav.sass
+++ b/css/pieces/_top-nav.sass
@@ -1,6 +1,7 @@
 .top-nav
   background-color: white
   height: 26px
+  border-bottom: 2px solid rgba(53,68,88, 0.6)
   .social li, .menu li
     display: inline-block
     font-size: 1.2em
