--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@
   width: 40.79%; }
 
 .six-col {
-  width: 49.25%; }
+  width: 55.25%; }
 
 .seven-col {
   width: 57.7%; }
@@ -63,7 +63,7 @@
   width: 100%; }
 
 .one-offset {
-  margin-left: 8.458%; }
+  margin-left: 3.458%; }
 
 .two-offset {
   margin-left: 16.91%; }
@@ -208,5 +208,30 @@ h1, h2, h3, h4, h5, h6 {
 
 footer {
   height: 39px; }
+
+main {
+  min-height: 600px;
+  margin-top: 50px; }
+
+.left-side, .right-side {
+  background-color: #e9e0d6;
+  padding: 30px;
+  border-radius: 6px;
+  min-height: 700px; }
+
+.left-side #task {
+  width: 100%;
+  height: 40px;
+  border: 2px solid rgba(53, 68, 88, 0.6);
+  font-size: 1.2em;
+  text-align: center; }
+.left-side .tooltip {
+  margin-top: 5px; }
+  .left-side .tooltip .check {
+    font-size: 0.7em;
+    color: #eb7260;
+    margin-right: 5px; }
+  .left-side .tooltip .tip {
+    margin-bottom: 5px; }
 
 /*# sourceMappingURL=main.css.map */
