add html and styles for left-side of main.html

--- a/css/partials/_general.sass
+++ b/css/partials/_general.sass
@@ -4,6 +4,11 @@ $teal: rgb(41,171,164)
 $white: rgb(233,224,214)
 $red: rgb(235,114,96)
 
+.red
+  color: red
+.green
+  color: green
+
 .container
   max-width: 1200px
   margin: 0 auto
