--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Lora", serif; }
 
+.red {
+  color: red; }
+
+.green {
+  color: green; }
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -224,7 +230,7 @@ main {
   height: 40px;
   border: 2px solid rgba(53, 68, 88, 0.6);
   font-size: 1.2em;
-  text-align: center; }
+  padding-left: 12px; }
 .left-side .tooltip {
   margin-top: 5px; }
   .left-side .tooltip .check {
@@ -233,5 +239,31 @@ main {
     margin-right: 5px; }
   .left-side .tooltip .tip {
     margin-bottom: 5px; }
+.left-side .how-it-works {
+  margin-top: 180px;
+  text-align: left;
+  padding: 25px; }
+  .left-side .how-it-works h3 {
+    font-size: 2.2em;
+    color: #354458;
+    width: 165px;
+    margin: 0 auto;
+    border-bottom: 2px solid #eb7260;
+    padding-bottom: 3px;
+    margin-bottom: 12px; }
+  .left-side .how-it-works p {
+    font-size: 1.4em;
+    line-height: 1.4;
+    padding: 0 30px;
+    margin-bottom: 12px; }
+
+.right-side h2 {
+  font-family: "Lobster", cursive;
+  font-size: 3.4em;
+  color: #eb7260;
+  width: 308px;
+  margin: 0 auto;
+  border-bottom: 2px solid rgba(53, 68, 88, 0.6);
+  padding-bottom: 10px; }
 
 /*# sourceMappingURL=main.css.map */
