--- a/css/main.sass
+++ b/css/main.sass
@@ -24,7 +24,7 @@ main
     height: 40px
     border: 2px solid rgba(53,68,88, 0.6)
     font-size: 1.2em
-    text-align: center
+    padding-left: 12px
   .tooltip
     margin-top: 5px
     .check
@@ -33,6 +33,31 @@ main
       margin-right: 5px
     .tip
       margin-bottom: 5px
+  .how-it-works
+    margin-top: 180px
+    text-align: left
+    padding: 25px
+    h3
+      font-size: 2.2em
+      color: $dark-blue
+      width: 165px
+      margin: 0 auto
+      border-bottom: 2px solid $red
+      padding-bottom: 3px
+      margin-bottom: 12px
+    p
+      font-size: 1.4em
+      line-height: 1.4
+      padding: 0 30px
+      margin-bottom: 12px
 
 .right-side
+  h2
+    font-family: 'Lobster', cursive
+    font-size: 3.4em
+    color: $red
+    width: 308px
+    margin: 0 auto
+    border-bottom: 2px solid rgba(53,68,88, 0.6)
+    padding-bottom: 10px
 
