--- a/css/main.css
+++ b/css/main.css
@@ -240,17 +240,18 @@ main {
   .left-side .tooltip .tip {
     margin-bottom: 5px; }
 .left-side .how-it-works {
-  margin-top: 180px;
+  margin-top: 200px;
   text-align: left;
-  padding: 25px; }
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.08);
+  border-radius: 6px; }
   .left-side .how-it-works h3 {
     font-size: 2.2em;
     color: #354458;
     width: 165px;
-    margin: 0 auto;
+    margin: 12px auto;
     border-bottom: 2px solid #eb7260;
-    padding-bottom: 3px;
-    margin-bottom: 12px; }
+    padding-bottom: 3px; }
   .left-side .how-it-works p {
     font-size: 1.4em;
     line-height: 1.4;
@@ -258,10 +259,9 @@ main {
     margin-bottom: 12px; }
 
 .right-side h2 {
-  font-family: "Lobster", cursive;
   font-size: 3.4em;
   color: #eb7260;
-  width: 308px;
+  width: 365px;
   margin: 0 auto;
   border-bottom: 2px solid rgba(53, 68, 88, 0.6);
   padding-bottom: 10px; }
