--- a/css/main.sass
+++ b/css/main.sass
@@ -34,17 +34,18 @@ main
     .tip
       margin-bottom: 5px
   .how-it-works
-    margin-top: 180px
+    margin-top: 200px
     text-align: left
-    padding: 25px
+    padding: 20px
+    background: rgba(0,0,0,0.08)
+    border-radius: 6px
     h3
       font-size: 2.2em
       color: $dark-blue
       width: 165px
-      margin: 0 auto
+      margin: 12px auto
       border-bottom: 2px solid $red
       padding-bottom: 3px
-      margin-bottom: 12px
     p
       font-size: 1.4em
       line-height: 1.4
@@ -53,10 +54,9 @@ main
 
 .right-side
   h2
-    font-family: 'Lobster', cursive
     font-size: 3.4em
     color: $red
-    width: 308px
+    width: 365px
     margin: 0 auto
     border-bottom: 2px solid rgba(53,68,88, 0.6)
     padding-bottom: 10px
