--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ main {
 .left-side .how-it-works {
   margin-top: 200px;
   text-align: left;
-  padding: 20px;
+  padding: 10px 20px;
   background: rgba(0, 0, 0, 0.08);
   border-radius: 6px; }
   .left-side .how-it-works h3 {
@@ -250,7 +250,7 @@ main {
     color: #354458;
     width: 165px;
     margin: 12px auto;
-    border-bottom: 2px solid #eb7260;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 3px; }
   .left-side .how-it-works p {
     font-size: 1.4em;
@@ -263,7 +263,7 @@ main {
   color: #eb7260;
   width: 365px;
   margin: 0 auto;
-  border-bottom: 2px solid rgba(53, 68, 88, 0.6);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px; }
 
 /*# sourceMappingURL=main.css.map */
