--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,7 @@ main {
   width: 100%;
   height: 40px;
   border: 2px solid rgba(53, 68, 88, 0.6);
+  border-radius: 3px;
   font-size: 1.2em;
   padding-left: 12px; }
 .left-side .tooltip {
@@ -243,7 +244,8 @@ main {
   margin-top: 200px;
   text-align: left;
   padding: 10px 20px;
-  background: rgba(0, 0, 0, 0.08);
+  background: rgba(0, 0, 0, 0.06);
+  border: 2px solid rgba(53, 68, 88, 0.6);
   border-radius: 6px; }
   .left-side .how-it-works h3 {
     font-size: 2.2em;
@@ -265,5 +267,8 @@ main {
   margin: 0 auto;
   border-bottom: 2px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px; }
+.right-side .task-list {
+  margin-top: 40px;
+  font-size: 1.4em; }
 
 /*# sourceMappingURL=main.css.map */
