--- a/css/main.sass
+++ b/css/main.sass
@@ -23,6 +23,7 @@ main
     width: 100%
     height: 40px
     border: 2px solid rgba(53,68,88, 0.6)
+    border-radius: 3px
     font-size: 1.2em
     padding-left: 12px
   .tooltip
@@ -37,7 +38,8 @@ main
     margin-top: 200px
     text-align: left
     padding: 10px 20px
-    background: rgba(0,0,0,0.08)
+    background: rgba(0,0,0,0.06)
+    border: 2px solid rgba(53,68,88, 0.6)
     border-radius: 6px
     h3
       font-size: 2.2em
@@ -60,4 +62,10 @@ main
     margin: 0 auto
     border-bottom: 2px solid rgba(0,0,0,0.2)
     padding-bottom: 10px
+
+  .task-list
+    margin-top: 40px
+    font-size: 1.4em
+
+
 
