--- a/css/main.sass
+++ b/css/main.sass
@@ -26,6 +26,19 @@ main
     border-radius: 3px
     font-size: 1.2em
     padding-left: 12px
+  #large-task
+    display: none
+    font-size: 1.2em
+    padding: 8px
+    border: 2px solid rgba(53,68,88, 0.6)
+  #large-task-button
+    display: none
+    background-color: $red
+    color: white
+    width: 100px
+    height: 20px
+    border: none
+    margin: 5px 0
   .tooltip
     margin-top: 5px
     .check
