--- a/css/pieces/_jumbotron.sass
+++ b/css/pieces/_jumbotron.sass
@@ -6,6 +6,7 @@
     width: 800px
     margin: 0 auto
     padding: 120px 40px 60px
+    text-shadow: 1px 1px 4px #000
   h1
     font-size: 5em
     font-weight: 600
