--- a/css/main.sass
+++ b/css/main.sass
@@ -17,6 +17,8 @@ main
   padding: 30px
   border-radius: 6px
   min-height: 700px
+  border-right: 3px solid rgba(0,0,0,0.2)
+  border-bottom: 3px solid rgba(0,0,0,0.2)
 
 .left-side
   #task
