--- a/css/pieces/_jumbotron.sass
+++ b/css/pieces/_jumbotron.sass
@@ -3,14 +3,17 @@
   color: white
   height: 420px
   hgroup
+    position: relative
+    left: 65px
     width: 800px
     margin: 0 auto
     padding: 120px 40px 60px
     text-shadow: 1px 1px 4px #000
   h1
-    font-size: 5em
+    font-size: 5.4em
     font-weight: 600
-    font-family: 'Maven Pro', sans-serif
+    font-family: 'Lobster Two', cursive
+    letter-spacing: 1.2px
     margin-bottom: 20px
   h2
     font-size: 1.6em
