--- a/css/main.sass
+++ b/css/main.sass
@@ -8,16 +8,42 @@
 @import 'pieces/footer'
 
 
+.main-top-nav
+  height: 50px
+  background-color: $dark-blue
+  .logo
+    margin-top: 7px
+    a
+      text-decoration: none
+      font-family: 'Lobster Two', cursive
+      letter-spacing: 1.2px
+      font-size: 2.4em
+      color: white
+  ul li
+    display: inline-block
+    font-size: 1.2em
+    text-transform: uppercase
+    margin-top: 15px
+    &:last-child
+      margin-right: 10px
+    a
+      text-decoration: none
+      padding-left: 50px
+      color: white
+      font-size: 1.2em
+
+
+
 main
   min-height: 600px
-  margin-top: 50px
+  margin-top: 40px
 
 .left-side, .right-side
   background-color: $white
   padding: 30px
   border-radius: 6px
   min-height: 700px
-  border-right: 3px solid rgba(0,0,0,0.2)
+  border-right: 2px solid rgba(0,0,0,0.2)
   border-bottom: 3px solid rgba(0,0,0,0.2)
 
 .left-side
