--- a/css/pieces/_jumbotron.sass
+++ b/css/pieces/_jumbotron.sass
@@ -20,7 +20,6 @@
     margin-bottom: 32px
   button
     background-color: $red
-    color: white
     border: none
     border-radius: 4px
     width: 130px
@@ -31,3 +30,6 @@
     font-weight: 400
     cursor: pointer
     margin-right: 66px
+    a
+      color: white
+      text-decoration: none
