--- a/css/pieces/_footer.sass
+++ b/css/pieces/_footer.sass
@@ -1,2 +1,8 @@
 footer
-  height: 39px
+  height: 50px
+  background-color: $dark-blue
+  color: white
+  text-align: right
+  .copyright
+    font-size: 1.2em
+    margin-top: 10px
