--- a/css/main.sass
+++ b/css/main.sass
@@ -45,6 +45,7 @@ main
   min-height: 700px
   border-right: 2px solid rgba(0,0,0,0.2)
   border-bottom: 3px solid rgba(0,0,0,0.2)
+  margin-bottom: 60px
 
 .left-side
   #task
