--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 800px;
     margin: 0 auto;
     padding: 120px 40px 60px;
-    text-shadow: 1px 1px 4px #000; }
+    text-shadow: 1px 1px 4px #3a9ad9; }
   .jumbotron h1 {
     font-size: 5.4em;
     font-weight: 600;
