--- a/css/main.sass
+++ b/css/main.sass
@@ -5,96 +5,11 @@
 @import 'pieces/top-nav'
 @import 'pieces/jumbotron'
 @import 'pieces/about-app'
+@import 'pieces/main-top-nav'
+@import 'pieces/left-main'
+// @import 'pieces/right-main'
 @import 'pieces/footer'
 
-
-.main-top-nav
-  height: 50px
-  background-color: $dark-blue
-  .logo
-    margin-top: 7px
-    a
-      text-decoration: none
-      font-family: 'Lobster Two', cursive
-      letter-spacing: 1.2px
-      font-size: 2.4em
-      color: white
-  ul li
-    display: inline-block
-    font-size: 1.2em
-    text-transform: uppercase
-    margin-top: 15px
-    &:last-child
-      margin-right: 10px
-    a
-      text-decoration: none
-      padding-left: 50px
-      color: white
-      font-size: 1.2em
-
-
-
-main
-  min-height: 600px
-  margin-top: 40px
-
-.left-side, .right-side
-  background-color: $white
-  padding: 30px
-  border-radius: 6px
-  min-height: 700px
-  border-right: 2px solid rgba(0,0,0,0.2)
-  border-bottom: 3px solid rgba(0,0,0,0.2)
-  margin-bottom: 60px
-
-.left-side
-  #task
-    width: 100%
-    height: 40px
-    border: 2px solid rgba(53,68,88, 0.6)
-    border-radius: 3px
-    font-size: 1.2em
-    padding-left: 12px
-  #large-task
-    display: none
-    font-size: 1.2em
-    padding: 8px
-    border: 2px solid rgba(53,68,88, 0.6)
-  #large-task-button
-    display: none
-    background-color: $red
-    color: white
-    width: 100px
-    height: 20px
-    border: none
-    margin: 5px 0
-  .tooltip
-    margin-top: 5px
-    .check
-      font-size: 0.7em
-      color: $red
-      margin-right: 5px
-    .tip
-      margin-bottom: 5px
-  .how-it-works
-    margin-top: 200px
-    text-align: left
-    padding: 10px 20px
-    background: rgba(0,0,0,0.06)
-    border: 2px solid rgba(53,68,88, 0.6)
-    border-radius: 6px
-    h3
-      font-size: 2.2em
-      color: $dark-blue
-      width: 165px
-      margin: 12px auto
-      border-bottom: 2px solid rgba(0,0,0,0.2)
-      padding-bottom: 3px
-    p
-      font-size: 1.4em
-      line-height: 1.4
-      padding: 0 30px
-      margin-bottom: 12px
 
 .right-side
   h2
