--- a/css/partials/_general.sass
+++ b/css/partials/_general.sass
@@ -3,6 +3,8 @@ $light-blue: rgb(58,154,217)
 $teal: rgb(41,171,164)
 $white: rgb(233,224,214)
 $red: rgb(235,114,96)
+$red-incomplete: #e74c3c
+$green-complete: #2ecc71
 
 .red
   color: red
