--- a/css/pieces/_top-nav.sass
+++ b/css/pieces/_top-nav.sass
@@ -15,3 +15,13 @@
     color: $red
     font-weight: bold
     text-decoration: none
+
+  .fa-github
+    color: #333
+    opacity: 0.7
+  .fa-facebook
+    color: #3b5998
+    opacity: 0.7
+  .fa-twitter
+    color: #55acee
+    opacity: 0.7
