--- a/css/main.css
+++ b/css/main.css
@@ -252,8 +252,7 @@ h1, h2, h3, h4, h5, h6 {
       font-size: 1.2em; }
 
 main {
-  min-height: 600px;
-  margin-top: 40px; }
+  min-height: 600px; }
 
 .left-side, .right-side {
   background-color: #e9e0d6;
@@ -262,6 +261,7 @@ main {
   min-height: 700px;
   border-right: 2px solid rgba(0, 0, 0, 0.2);
   border-bottom: 3px solid rgba(0, 0, 0, 0.2);
+  margin-top: 110px;
   margin-bottom: 60px; }
 
 .left-side #task {
@@ -301,8 +301,9 @@ main {
   border-radius: 6px; }
   .left-side .how-it-works h3 {
     font-size: 2.2em;
-    color: #354458;
-    width: 165px;
+    font-weight: 600;
+    color: #eb7260;
+    width: 175px;
     margin: 12px auto;
     border-bottom: 2px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 3px; }
@@ -321,46 +322,50 @@ footer {
     font-size: 1.2em;
     margin-top: 10px; }
 
-.right-side h2 {
-  font-size: 3.4em;
-  color: #eb7260;
-  width: 365px;
-  margin: 0 auto;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 10px; }
-.right-side .task-list {
-  margin-top: 40px;
-  font-size: 1.4em; }
-.right-side .task {
-  position: relative;
-  min-height: 70px;
-  width: 100%;
-  padding: 10px 40px;
-  margin-bottom: 10px;
-  border-radius: 6px;
-  color: #e9e0d6;
-  text-shadow: 1px 1px 1px #000;
-  cursor: pointer;
-  opacity: 0.9; }
-  .right-side .task:hover {
-    opacity: 1; }
-  .right-side .task p {
-    font-size: 1.2em; }
-  .right-side .task .state {
+.right-side {
+  position: relative; }
+  .right-side h2 {
+    font-size: 3.8em;
+    font-weight: 600;
+    color: #eb7260;
+    padding-bottom: 10px;
     position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 0 40px 10px 0;
-    font-size: 0.6em;
-    letter-spacing: 1.2px;
-    background-color: rgba(0, 0, 0, 0.2); }
-.right-side .complete, .right-side .incomplete {
-  opacity: 0.9; }
-  .right-side .complete:hover, .right-side .incomplete:hover {
-    opacity: 1; }
-.right-side .complete {
-  background-color: #2ecc71; }
-.right-side .incomplete {
-  background-color: #e74c3c; }
+    top: 0;
+    left: 10px;
+    margin-top: -42px; }
+  .right-side .task-list {
+    margin-top: 40px;
+    font-size: 1.4em; }
+  .right-side .task {
+    position: relative;
+    min-height: 70px;
+    width: 100%;
+    padding: 10px 40px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    color: #e9e0d6;
+    text-shadow: 1px 1px 1px #000;
+    cursor: pointer;
+    opacity: 0.9; }
+    .right-side .task:hover {
+      opacity: 1; }
+    .right-side .task p {
+      font-size: 1.2em; }
+    .right-side .task .state {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      margin: 0 40px 10px 0;
+      font-size: 0.6em;
+      letter-spacing: 1.2px;
+      background-color: rgba(0, 0, 0, 0.2); }
+  .right-side .complete, .right-side .incomplete {
+    opacity: 0.9; }
+    .right-side .complete:hover, .right-side .incomplete:hover {
+      opacity: 1; }
+  .right-side .complete {
+    background-color: #2ecc71; }
+  .right-side .incomplete {
+    background-color: #e74c3c; }
 
 /*# sourceMappingURL=main.css.map */
