--- a/css/main.sass
+++ b/css/main.sass
@@ -12,13 +12,16 @@
 
 
 .right-side
+  position: relative
   h2
-    font-size: 3.4em
+    font-size: 3.8em
+    font-weight: 600
     color: $red
-    width: 365px
-    margin: 0 auto
-    border-bottom: 2px solid rgba(0,0,0,0.2)
     padding-bottom: 10px
+    position: absolute
+    top: 0
+    left: 10px
+    margin-top: -42px
 
   .task-list
     margin-top: 40px
