--- a/css/pieces/_left-main.sass
+++ b/css/pieces/_left-main.sass
@@ -1,6 +1,5 @@
 main
   min-height: 600px
-  margin-top: 40px
 
 .left-side, .right-side
   background-color: $white
@@ -9,6 +8,7 @@ main
   min-height: 700px
   border-right: 2px solid rgba(0,0,0,0.2)
   border-bottom: 3px solid rgba(0,0,0,0.2)
+  margin-top: 110px
   margin-bottom: 60px
 
 .left-side
@@ -49,8 +49,9 @@ main
     border-radius: 6px
     h3
       font-size: 2.2em
-      color: $dark-blue
-      width: 165px
+      font-weight: 600
+      color: $red
+      width: 175px
       margin: 12px auto
       border-bottom: 2px solid rgba(0,0,0,0.2)
       padding-bottom: 3px
