add no-task-notice and jquery to make it disappear when a task is entered

--- a/css/main.sass
+++ b/css/main.sass
@@ -16,6 +16,7 @@
   h2
     font-size: 3.8em
     font-weight: 600
+    text-shadow: 1px 1px 1px #ccc
     color: $red
     padding-bottom: 10px
     position: absolute
@@ -23,8 +24,15 @@
     left: 10px
     margin-top: -42px
 
+  .no-task-notice
+    font-size: 2.2em
+    text-transform: uppercase
+    color: $dark-blue
+    position: absolute
+    top: 140px
+    left: 130px
+
   .task-list
-    margin-top: 40px
     font-size: 1.4em
 
   .task
