--- a/css/pieces/_left-main.sass
+++ b/css/pieces/_left-main.sass
@@ -34,6 +34,7 @@ main
     margin: 5px 0
   .tooltip
     margin-top: 5px
+    font-size: 1.2em
     .check
       font-size: 0.7em
       color: $red
@@ -50,6 +51,7 @@ main
     h3
       font-size: 2.2em
       font-weight: 600
+      text-shadow: 1px 1px 1px #ccc
       color: $red
       width: 175px
       margin: 12px auto
