--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,8 @@ main {
   border: none;
   margin: 5px 0; }
 .left-side .tooltip {
-  margin-top: 5px; }
+  margin-top: 5px;
+  font-size: 1.2em; }
   .left-side .tooltip .check {
     font-size: 0.7em;
     color: #eb7260;
@@ -302,6 +303,7 @@ main {
   .left-side .how-it-works h3 {
     font-size: 2.2em;
     font-weight: 600;
+    text-shadow: 1px 1px 1px #ccc;
     color: #eb7260;
     width: 175px;
     margin: 12px auto;
@@ -327,14 +329,21 @@ footer {
   .right-side h2 {
     font-size: 3.8em;
     font-weight: 600;
+    text-shadow: 1px 1px 1px #ccc;
     color: #eb7260;
     padding-bottom: 10px;
     position: absolute;
     top: 0;
     left: 10px;
     margin-top: -42px; }
+  .right-side .no-task-notice {
+    font-size: 2.2em;
+    text-transform: uppercase;
+    color: #354458;
+    position: absolute;
+    top: 140px;
+    left: 130px; }
   .right-side .task-list {
-    margin-top: 40px;
     font-size: 1.4em; }
   .right-side .task {
     position: relative;
